--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: Mike  Jiao
+bio: a guy chasing his imagination
 
 # twitter summary info
 description: A blog about technology and stuff related
