--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,13 @@ name: Mike  Jiao
 bio: a guy chasing his imagination
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: a blog about humans, technology, and the crazy voices inside my head
+	
 
 # if it's an external image, update below for true
 # better with square images
-external-image: false
-picture: assets/images/profile.jpg
+external-image: true
+picture: https://scontent.fykz1-1.fna.fbcdn.net/v/t1.0-9/25659688_1711846212179253_1302600049228956415_n.jpg?oh=4a61ba57fdef255f8080faa8430c6616&oe=5AF55D60
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
